--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 /* Faded background image for entire website */
 body {
-  font-family: Arial, sans-serif;
+  font-family: Times New Roman, sans-serif;
   line-height: 1.6;
   background: url('media/background.jpg') no-repeat center center fixed;
   background-size: cover;
